src/parser.c
#include "parser.h"
#include "lexer.h"
#include "diag.h"

#include <errno.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

#define MAX_STR_PARTS 128

// Parser holds the scan position over a token array plus the arena that owns the
// resulting tree. `no_struct` suppresses brace struct-literals while parsing the
// condition/scrutinee of if/for/match, so the following `{` reads as a block
// rather than a struct literal (the same disambiguation Rust uses). `panic`
// suppresses cascading messages until the next synchronisation point.
typedef struct {
    const Token *toks;
    size_t       count;
    size_t       pos;
    Arena       *arena;
    const char  *src_name;
    int          had_error;
    int          panic;
    int          no_struct;
    int          depth;          // recursion depth of the expr/type descent (overflow guard)
} Parser;

// Cap on recursive-descent nesting for expressions and types. Hand-written recursive
// descent has no stack-overflow protection, so deeply nested input (`((((…))))`, a long
// `---…` chain, `[[[…]]]`) would otherwise crash inglec with a SIGSEGV instead of a clean
// diagnostic. 1000 is far beyond any human-written nesting yet leaves ample C stack.
#define MAX_PARSE_DEPTH 1000

// ---- A small generic vector, used to gather child nodes whose count is not
// known up front. It is malloc-backed during the parse, then copied into the
// arena and freed; the arena copy is what the tree keeps.
typedef struct {
    unsigned char *data;
    size_t         len;
    size_t         cap;
    size_t         elem;
} Vec;

static void vec_init(Vec *v, size_t elem) {
    v->data = NULL;
    v->len  = 0;
    v->cap  = 0;
    v->elem = elem;
}





static void vec_push(Vec *v, const void *elem) {
    if (v->len == v->cap) {
        size_t new_cap = v->cap ? v->cap * 2 : 8;
        unsigned char *grown = realloc(v->data, new_cap * v->elem);
        if (grown == NULL) {
            fprintf(stderr, "inglec: out of memory while parsing\n");
            exit(70);
        }
        v->data = grown;
        v->cap  = new_cap;
    }
    memcpy(v->data + v->len * v->elem, elem, v->elem);
    v->len++;
}





// vec_to_arena copies the gathered elements into the arena, reports the count,
// frees the scratch buffer, and returns the arena array (NULL when empty).
static void *vec_to_arena(Arena *arena, Vec *v, size_t *out_count) {
    *out_count = v->len;
    void *out = NULL;
    if (v->len > 0) {
        out = arena_alloc(arena, v->len * v->elem);
        memcpy(out, v->data, v->len * v->elem);
    }
    free(v->data);
    v->data = NULL;
    v->len  = 0;
    v->cap  = 0;
    return out;
}





// ---- Token cursor helpers. ----

static const Token *cur(Parser *p) {
    return &p->toks[p->pos];
}





static TokenType pk(Parser *p) {
    return p->toks[p->pos].type;
}


// pk2 peeks the token AFTER the current one (the token list is EOF-terminated, so this is in-bounds
// whenever the current token is not EOF). Used to spot a `name:` named argument (IDENT then COLON).
static TokenType pk2(Parser *p) {
    return p->toks[p->pos].type == TOK_EOF ? TOK_EOF : p->toks[p->pos + 1].type;
}





static const Token *adv(Parser *p) {
    const Token *t = &p->toks[p->pos];
    if (p->toks[p->pos].type != TOK_EOF) {
        p->pos++;
    }
    return t;
}





static int check(Parser *p, TokenType t) {
    return pk(p) == t;
}





static int match(Parser *p, TokenType t) {
    if (check(p, t)) {
        adv(p);
        return 1;
    }
    return 0;
}





static int at_end(Parser *p) {
    return pk(p) == TOK_EOF;
}





static void skip_newlines(Parser *p) {
    while (check(p, TOK_NEWLINE)) {
        adv(p);
    }
}





static const char *tok_text(Parser *p, const Token *t) {
    return arena_strndup(p->arena, t->start, t->length);
}




// tok_doc turns a token's raw `///` doc-comment block (a view into the source,
// with the markers and inter-line newlines intact — see lexer.c) into a tidy,
// arena-allocated Markdown string: each line's leading whitespace, its `///`
// marker, and one following space are stripped, and the lines are rejoined with
// '\n'. Returns NULL when the token carries no doc comment. This is the single
// place doc text is cleaned, so hover and `--emit=docs` render it identically.
static const char *tok_doc(Parser *p, const Token *t) {
    if (t->doc == NULL || t->doc_length == 0) {
        return NULL;
    }
    char       *out  = arena_alloc(p->arena, t->doc_length + 1);  // never exceeds the span
    size_t      o    = 0;
    const char *cur  = t->doc;
    const char *end  = t->doc + t->doc_length;
    int         first = 1;
    while (cur < end) {
        const char *nl = cur;
        while (nl < end && *nl != '\n') {
            nl++;
        }
        const char *ln = cur;                       // strip indent, `///`, one space
        while (ln < nl && (*ln == ' ' || *ln == '\t')) {
            ln++;
        }
        if (nl - ln >= 3 && ln[0] == '/' && ln[1] == '/' && ln[2] == '/') {
            ln += 3;
        }
        if (ln < nl && *ln == ' ') {
            ln++;
        }
        const char *le = nl;                        // drop a trailing '\r'
        if (le > ln && le[-1] == '\r') {
            le--;
        }
        if (!first) {
            out[o++] = '\n';
        }
        memcpy(out + o, ln, (size_t)(le - ln));
        o += (size_t)(le - ln);
        first = 0;
        cur = (nl < end) ? nl + 1 : end;
    }
    out[o] = '\0';
    return out;
}





// ---- Error reporting and recovery. ----

static void error_at(Parser *p, const Token *t, const char *msg) {
    if (!p->panic) {
        // Build the NUL-terminated "near" token text (full length, no truncation,
        // so the human rendering stays byte-identical to the old %.*s form).
        char  stackbuf[128];
        char *near = stackbuf;
        if (t->length + 1 > sizeof stackbuf) {
            near = malloc(t->length + 1);
        }
        if (near != NULL) {
            memcpy(near, t->start, t->length);
            near[t->length] = '\0';
            diag_error(p->src_name, t->line, t->col, msg, near, NULL);
            if (near != stackbuf) {
                free(near);
            }
        }
    }
    p->had_error = 1;
    p->panic     = 1;
}





// expect consumes a token of the given type, or reports `msg` and returns the
// current token without advancing.
static const Token *expect(Parser *p, TokenType t, const char *msg) {
    if (check(p, t)) {
        return adv(p);
    }
    error_at(p, cur(p), msg);
    return cur(p);
}





// synchronize discards tokens until a likely statement/declaration boundary so
// that one syntax error does not cascade into a flood of spurious ones.
static void synchronize(Parser *p) {
    p->panic = 0;
    while (!at_end(p)) {
        if (check(p, TOK_NEWLINE)) {
            adv(p);
            return;
        }
        switch (pk(p)) {
            case TOK_FN:
            case TOK_STRUCT:
            case TOK_ENUM:
            case TOK_INTERFACE:
            case TOK_IMPORT:
            case TOK_LET:
            case TOK_VAR:
            case TOK_RETURN:
            case TOK_IF:
            case TOK_FOR:
            case TOK_LOOP:
            case TOK_MATCH:
            case TOK_NURSERY:
            case TOK_SPAWN:
            case TOK_RBRACE:
                return;
            default:
                adv(p);
        }
    }
}





// ---- Node allocators (line/col seeded from the current token). ----

// suffix_code maps an integer-literal width suffix to a small code the checker
// turns into a type: 1 i8, 2 i16, 3 i32, 4 i64, 5 u8, 6 u16, 7 u32, 8 u64; 0 = unknown.
// (The parser can't name the checker's SemType constants, so it passes a code.)
static int suffix_code(const char *s, size_t len) {
    if (len == 2 && s[0] == 'i' && s[1] == '8') return 1;
    if (len == 3 && strncmp(s, "i16", 3) == 0)  return 2;
    if (len == 3 && strncmp(s, "i32", 3) == 0)  return 3;
    if (len == 3 && strncmp(s, "i64", 3) == 0)  return 4;
    if (len == 2 && s[0] == 'u' && s[1] == '8') return 5;
    if (len == 3 && strncmp(s, "u16", 3) == 0)  return 6;
    if (len == 3 && strncmp(s, "u32", 3) == 0)  return 7;
    if (len == 3 && strncmp(s, "u64", 3) == 0)  return 8;
    return 0;
}


static Expr *new_expr(Parser *p, ExprKind kind) {
    Expr *e = arena_alloc(p->arena, sizeof(Expr));
    // Zero the whole node first: the arena does not clear memory, so any per-kind
    // `as.*` field a creation site forgets to set would otherwise be garbage — a latent
    // bug that only surfaces when the allocation pattern changes (e.g. `closure_call`,
    // which a non-closure call never sets; see OFI-026). Fields needing a non-zero
    // default (resolved_fn = -1, since 0 is a valid fn index) are set explicitly at
    // their creation site and override this.
    memset(e, 0, sizeof(*e));
    e->kind = kind;
    e->line = cur(p)->line;
    e->col  = cur(p)->col;
    e->variant_enum_id = -1;   // 0 is a valid enum id, so default to "not a variant" explicitly
    e->variant_tag     = -1;
    return e;
}





static Stmt *new_stmt(Parser *p, StmtKind kind) {
    // Arena memory is not zeroed, so clear the whole node — same hardening as new_expr
    // and new_type (OFI-026). Per-kind `as.*` flags that codegen reads but the checker
    // only sets on some paths (STMT_EXPR.release_temp, STMT_MATCH.subject_drop) would
    // otherwise be recycled garbage, e.g. a spurious OP_RELEASE → double-free.
    Stmt *s = arena_alloc(p->arena, sizeof(Stmt));
    memset(s, 0, sizeof(*s));
    s->kind = kind;
    s->line = cur(p)->line;
    s->col  = cur(p)->col;
    return s;
}





static Type *new_type(Parser *p, TypeKind kind) {
    // Arena memory is not zeroed, so clear the whole node: every per-kind `as.*`
    // field a caller leaves unset (e.g. the optional `qualifier` on a bare
    // struct-literal type) must read as 0/NULL, not recycled garbage. Same class
    // of bug as the new_expr memset (OFI-026).
    Type *t = arena_alloc(p->arena, sizeof(Type));
    memset(t, 0, sizeof(Type));
    t->kind = kind;
    t->line = cur(p)->line;
    t->col  = cur(p)->col;
    return t;
}





// ---- Forward declarations for the mutually recursive descent. ----

static Expr  *parse_expression(Parser *p);
static Type  *parse_type(Parser *p);
static Stmt  *parse_statement(Parser *p);
static Block  parse_block(Parser *p);
static Decl  *parse_decl(Parser *p);
static FnDecl parse_fn(Parser *p, int with_body);
static void  expect_type_close(Parser *p);





// ---- Types. ----

static Type *parse_type(Parser *p) {
    if (++p->depth > MAX_PARSE_DEPTH) {
        error_at(p, cur(p), "type nests too deeply");
        p->depth--;
        Type *stub = new_type(p, TYPE_NAME);   // benign placeholder; panic now unwinds
        stub->as.name.name = "_";
        return stub;
    }
    Type *t;
    if (check(p, TOK_LBRACKET)) {
        adv(p);
        Type *elem = parse_type(p);
        expect(p, TOK_RBRACKET, "expected ']' to close array type");
        t = new_type(p, TYPE_ARRAY);
        t->as.array.elem = elem;
    } else if (check(p, TOK_FN)) {
        // A function type: `fn(T1, T2) -> R`. A missing `-> R` means it returns
        // unit. This is the type of a function value (a named function or a lambda).
        adv(p);   // 'fn'
        t = new_type(p, TYPE_FN);
        expect(p, TOK_LPAREN, "expected '(' after 'fn' in a function type");
        Vec params;
        vec_init(&params, sizeof(Type *));
        if (!check(p, TOK_RPAREN)) {
            for (;;) {
                Type *param = parse_type(p);
                vec_push(&params, &param);
                if (match(p, TOK_COMMA)) {
                    continue;
                }
                break;
            }
        }
        expect(p, TOK_RPAREN, "expected ')' to close a function type's parameters");
        t->as.fn.params = vec_to_arena(p->arena, &params, &t->as.fn.param_count);
        t->as.fn.ret = match(p, TOK_ARROW) ? parse_type(p) : NULL;
    } else {
        const Token *name_tok = expect(p, TOK_IDENT, "expected a type name");
        const char *name = tok_text(p, name_tok);
        // Remember the NAME token's position: new_type() below records cur(p), which by
        // then sits PAST the type, so the LSP would key hover/go-to-def at the wrong spot.
        const Token *pos_tok = name_tok;
        // A module-qualified type path: `mod.Type` — the first ident is the alias.
        const char *qualifier = NULL;
        if (match(p, TOK_DOT)) {
            qualifier = name;
            const Token *mem_tok = expect(p, TOK_IDENT,
                                          "expected a type name after '.'");
            name = tok_text(p, mem_tok);
            pos_tok = mem_tok;   // position the type at its NAME, not the `.` qualifier
        }
        if (match(p, TOK_LT)) {
            Vec args;
            vec_init(&args, sizeof(Type *));
            for (;;) {
                Type *arg = parse_type(p);
                vec_push(&args, &arg);
                if (match(p, TOK_COMMA)) {
                    continue;
                }
                break;
            }
            expect_type_close(p);
            t = new_type(p, TYPE_GENERIC);
            t->as.generic.qualifier = qualifier;
            t->as.generic.name = name;
            t->as.generic.args = vec_to_arena(p->arena, &args,
                                              &t->as.generic.arg_count);
        } else {
            t = new_type(p, TYPE_NAME);
            t->as.name.qualifier = qualifier;
            t->as.name.name = name;
        }
        t->line = pos_tok->line;   // key the node at its name (for LSP hover/go-to-def)
        t->col  = pos_tok->col;
    }
    p->depth--;
    return t;
}





// ---- Expressions (recursive descent with precedence climbing). ----

// binary_prec returns the binding power of a binary operator, or 0 if `t` is not
// one. Higher binds tighter. All Ingle binary operators are left-associative.
static int binary_prec(TokenType t) {
    switch (t) {
        case TOK_OR:                                   return 1;   // ||
        case TOK_AND:                                  return 2;   // &&
        case TOK_PIPE:                                 return 3;   // |  (bitwise or)
        case TOK_CARET:                                return 4;   // ^  (bitwise xor)
        case TOK_AMP:                                  return 5;   // &  (bitwise and)
        case TOK_EQ:  case TOK_NEQ:                    return 6;   // == !=
        case TOK_LT:  case TOK_LE: case TOK_GT: case TOK_GE: return 7;   // < <= > >=
        case TOK_SHL: case TOK_SHR:                    return 8;   // << >>
        case TOK_PLUS: case TOK_MINUS:                 return 9;   // + -
        case TOK_STAR: case TOK_SLASH: case TOK_PERCENT: return 10;  // * / %
        default:                                       return 0;
    }
}





// looks_like_generic_struct_lit decides, from a '<' following a type name in
// expression position, whether this is a generic struct literal `Name<T> { … }`
// rather than a less-than comparison. This is a SOUND decision, not a heuristic
// (OFI-002): the rule is `<TypeArgs> {` ⇒ generic literal, and it is unambiguous
// because (1) no primary expression begins with '{' (see parse_primary — there is
// no TOK_LBRACE case), so a `> {` sequence can never be a valid comparison
// continuation; and (2) a type-argument list contains ONLY the tokens parse_type
// can consume. So we accept the form iff every token between the angle brackets is
// type-legal AND the balanced '>' is immediately followed by '{'. Any other token
// (a literal, an operator, a newline — anything a type cannot contain) proves this
// '<' is a comparison and we bail. False positives are therefore impossible for
// well-formed types; a malformed type-ish span at worst yields a parse error in
// parse_type, never a silent miscompile.
//
// LOAD-BEARING INVARIANT: this rests on "no expression begins with '{'". If Ingle
// ever gains brace-initial expressions (map/record literals, block-expressions),
// `> {` stops being unambiguous and OFI-002 must be reopened — that is the point of
// stating it here. See docs/grammar.ebnf and docs/language.md.

// type_arg_token reports whether `t` can appear inside a type-argument list, i.e.
// whether parse_type could consume it. This is the exact token set of the type
// grammar: names + qualification (`mod.Type`), nested generics (`<`/`>`), the arg
// separator (`,`), array types (`[T]`), and function types (`fn(A, B) -> R`).
static int type_arg_token(TokenType t) {
    switch (t) {
        case TOK_IDENT:                                   // type / primitive names
        case TOK_DOT:                                     // module-qualified `mod.Type`
        case TOK_COMMA:                                   // argument separator
        case TOK_LBRACKET: case TOK_RBRACKET:             // array type `[T]`
        case TOK_FN: case TOK_LPAREN: case TOK_RPAREN:    // function type `fn(A) -> R`
        case TOK_ARROW:                                   //   …its return arrow
            return 1;
        default:                                          // '<'/'>' handled by the scanner
            return 0;
    }
}

static int looks_like_generic_struct_lit_from(Parser *p, size_t start) {
    size_t i = start;    // positioned at the '<'
    int depth = 0;
    while (i < p->count) {
        TokenType t = p->toks[i].type;
        if (t == TOK_LT) {
            depth++;
        } else if (t == TOK_GT) {
            depth--;
            if (depth == 0) {
                return (i + 1 < p->count && p->toks[i + 1].type == TOK_LBRACE);
            }
        } else if (t == TOK_SHR) {
            // '>>' closes two nested type-arg lists at once (Box<Box<int>>). It counts
            // as two '>'. If that exactly closes the outer list, the form is a generic
            // literal iff a '{' follows; overshooting (depth < 0) means this '<' was a
            // comparison after all (e.g. `a < b >> c`).
            depth -= 2;
            if (depth == 0) {
                return (i + 1 < p->count && p->toks[i + 1].type == TOK_LBRACE);
            }
            if (depth < 0) {
                return 0;
            }
        } else if (!type_arg_token(t)) {
            // A token a type can't contain ⇒ this '<' is a comparison, not a
            // type-argument list. (Subsumes the old EOF/NEWLINE/brace/paren bails;
            // TOK_SHL lands here too — a '<<' can't open a type-arg list.)
            return 0;
        }
        i++;
    }
    return 0;
}

// Back-compat wrapper: the lookahead from the current '<'.
static int looks_like_generic_struct_lit(Parser *p) {
    return looks_like_generic_struct_lit_from(p, p->pos);
}

// expect_type_close consumes the '>' that closes a type-argument list. A '>>'
// (TOK_SHR) sitting here is the combined close of TWO nested generic lists, e.g.
// `Box<Box<int>>`: we split it — rewrite this token into a single '>' for the
// ENCLOSING list and do NOT advance, so the next close consumes the remaining '>'.
// This is the standard C++/Rust/Java trick that lets the shift operator and nested
// generics share the '>>' lexeme. (Parser.toks is the lexer's mutable buffer; its
// `const` is only an API contract, so rewriting the token in place is safe.)
static void expect_type_close(Parser *p) {
    if (check(p, TOK_SHR)) {
        Token *t = (Token *)&p->toks[p->pos];
        t->type    = TOK_GT;
        t->start  += 1;          // now points at the second '>' (keeps spans honest)
        t->length  = 1;
        t->col    += 1;
        return;                  // do not advance — the rewritten '>' is consumed next
    }
    expect(p, TOK_GT, "expected '>' to close type arguments");
}





// parse_struct_lit_body parses `{ field: value, … }` for an already-parsed type.
static Expr *parse_struct_lit(Parser *p, Type *type) {
    Expr *e = new_expr(p, EXPR_STRUCT_LIT);
    e->as.struct_lit.type = type;
    e->as.struct_lit.resolved_struct = -1;   // set by the checker
    e->as.struct_lit.inline_sid = -1;        // set by the checker (value-types 3b.4c)
    e->as.struct_lit.box_result = 1;         // default: box the constructed struct
    e->as.struct_lit.witnesses     = NULL;   // set by the checker for a bounded generic struct
    e->as.struct_lit.witness_total = 0;
    expect(p, TOK_LBRACE, "expected '{' to begin struct literal");
    skip_newlines(p);

    Vec fields;
    vec_init(&fields, sizeof(StructLitField));
    while (!check(p, TOK_RBRACE) && !at_end(p)) {
        StructLitField f;
        const Token *name_tok = expect(p, TOK_IDENT, "expected field name");
        f.name = tok_text(p, name_tok);
        expect(p, TOK_COLON, "expected ':' after field name");
        f.value = parse_expression(p);
        vec_push(&fields, &f);

        skip_newlines(p);
        if (match(p, TOK_COMMA)) {
            skip_newlines(p);
        }
    }
    expect(p, TOK_RBRACE, "expected '}' to close struct literal");
    e->as.struct_lit.fields = vec_to_arena(p->arena, &fields,
                                           &e->as.struct_lit.field_count);
    return e;
}





// parse_arg_list parses a parenthesised, comma-separated argument list, the opening '(' already
// consumed. Struct literals are re-enabled inside. An argument may be NAMED — `name: value` (OFI-140),
// for enum-variant construction — captured into a parallel `*out_names` array (one entry per arg, NULL
// for a positional arg); `*out_names` stays NULL when no argument was named (the common case). The
// checker enforces that named arguments are only legal for an enum variant and reorders them.
static Expr **parse_arg_list(Parser *p, size_t *count, const char ***out_names) {
    int saved = p->no_struct;
    p->no_struct = 0;

    Vec args;
    Vec names;
    vec_init(&args, sizeof(Expr *));
    vec_init(&names, sizeof(const char *));
    int any_named = 0;
    skip_newlines(p);
    if (!check(p, TOK_RPAREN)) {
        for (;;) {
            skip_newlines(p);
            const char *nm = NULL;
            if (check(p, TOK_IDENT) && pk2(p) == TOK_COLON) {   // a `name:` named argument
                nm = tok_text(p, adv(p));   // the field name
                adv(p);                     // the ':'
                skip_newlines(p);
                any_named = 1;
            }
            Expr *a = parse_expression(p);
            vec_push(&args, &a);
            vec_push(&names, &nm);
            skip_newlines(p);
            if (match(p, TOK_COMMA)) {
                skip_newlines(p);
                if (check(p, TOK_RPAREN)) {
                    break;
                }
                continue;
            }
            break;
        }
    }
    expect(p, TOK_RPAREN, "expected ')' after arguments");

    p->no_struct = saved;
    Expr **arr = vec_to_arena(p->arena, &args, count);
    size_t nc = 0;
    const char **narr = vec_to_arena(p->arena, &names, &nc);   // also releases the names Vec's buffer
    if (out_names != NULL) {
        *out_names = any_named ? narr : NULL;   // only carry names when at least one arg was named
    }
    return arr;
}




